@@ -1,4 +1,5 @@
 v0.4.x  --  2015.03.20
+* Added support to nested styles
 * Added support to `.trim()` and `.throbber()` directly from `cli-color`, without require an internal module
 * Styles are now unified to a single sentence
 * Improved `.trim()` Regular Expression to remove all control sequence
